// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Horizontal bar chart - Screen resolution Should remain unchanged on zoom in 1`] = `
<div>
  <div
    class="fui-hbc__root"
  >
    <div>
      <div
        class="fui-hbc__items"
        data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
      >
        <div
          class="fui-hbc__chartTitle"
        >
          <div
            class="fui-hbc__chartTitleLeft"
            tabindex="0"
          >
            <span
              data-is-focusable="false"
              role="text"
            >
              one
            </span>
            <span
              hidden=""
            />
          </div>
          <div
            class="fui-hbc__chartTitleRight"
            data-is-focusable="false"
            role="text"
          >
            1,543
          </div>
        </div>
        <svg
          aria-label="one"
          class="fui-hbc__chart"
        >
          <g
            id="_HorizontalLine_lllllm_0"
          >
            <rect
              aria-label="2020/04/30, 10%."
              class="fui-hbc__barWrapper"
              data-is-focusable="true"
              fill="#004b50"
              height="12"
              opacity="1"
              role="img"
              tabindex="0"
              width="10.286666666666665%"
              x="0%"
              y="0"
            />
            <rect
              aria-label="13457/15000."
              class="fui-hbc__barWrapper"
              data-is-focusable="false"
              fill="var(--colorBackgroundOverlay)"
              height="12"
              opacity="1"
              role="img"
              width="89.71333333333334%"
              x="10.286666666666665%"
              y="0"
            />
          </g>
        </svg>
      </div>
    </div>
    <div>
      <div
        class="fui-hbc__items"
        data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
      >
        <div
          class="fui-hbc__chartTitle"
        >
          <div
            class="fui-hbc__chartTitleLeft"
            tabindex="0"
          >
            <span
              data-is-focusable="false"
              role="text"
            >
              two
            </span>
            <span
              hidden=""
            />
          </div>
          <div
            class="fui-hbc__chartTitleRight"
            data-is-focusable="false"
            role="text"
          >
            800
          </div>
        </div>
        <svg
          aria-label="two"
          class="fui-hbc__chart"
        >
          <g
            id="_HorizontalLine_lllllm_1"
          >
            <rect
              aria-label="2020/04/30, 5%."
              class="fui-hbc__barWrapper"
              data-is-focusable="true"
              fill="#5c2d91"
              height="12"
              opacity="1"
              role="img"
              tabindex="0"
              width="5.333333333333334%"
              x="0%"
              y="0"
            />
            <rect
              aria-label="14200/15000."
              class="fui-hbc__barWrapper"
              data-is-focusable="false"
              fill="var(--colorBackgroundOverlay)"
              height="12"
              opacity="1"
              role="img"
              width="94.66666666666667%"
              x="5.333333333333334%"
              y="0"
            />
          </g>
        </svg>
      </div>
    </div>
    <div>
      <div
        class="fui-hbc__items"
        data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
      >
        <div
          class="fui-hbc__chartTitle"
        >
          <div
            class="fui-hbc__chartTitleLeft"
            tabindex="0"
          >
            <span
              data-is-focusable="false"
              role="text"
            >
              three
            </span>
            <span
              hidden=""
            />
          </div>
          <div
            class="fui-hbc__chartTitleRight"
            data-is-focusable="false"
            role="text"
          >
            8,888
          </div>
        </div>
        <svg
          aria-label="three"
          class="fui-hbc__chart"
        >
          <g
            id="_HorizontalLine_lllllm_2"
          >
            <rect
              aria-label="2020/04/30, 59%."
              class="fui-hbc__barWrapper"
              data-is-focusable="true"
              fill="#a4262c"
              height="12"
              opacity="1"
              role="img"
              tabindex="0"
              width="59.25333333333334%"
              x="0%"
              y="0"
            />
            <rect
              aria-label="6112/15000."
              class="fui-hbc__barWrapper"
              data-is-focusable="false"
              fill="var(--colorBackgroundOverlay)"
              height="12"
              opacity="1"
              role="img"
              width="40.74666666666666%"
              x="59.25333333333334%"
              y="0"
            />
          </g>
        </svg>
      </div>
    </div>
    <div
      class="fui-cart__calloutContainer"
      id="callout70"
    />
  </div>
</div>
`;

exports[`Horizontal bar chart - Screen resolution Should remain unchanged on zoom out 1`] = `
<div>
  <div
    class="fui-hbc__root"
  >
    <div>
      <div
        class="fui-hbc__items"
        data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
      >
        <div
          class="fui-hbc__chartTitle"
        >
          <div
            class="fui-hbc__chartTitleLeft"
            tabindex="0"
          >
            <span
              data-is-focusable="false"
              role="text"
            >
              one
            </span>
            <span
              hidden=""
            />
          </div>
          <div
            class="fui-hbc__chartTitleRight"
            data-is-focusable="false"
            role="text"
          >
            1,543
          </div>
        </div>
        <svg
          aria-label="one"
          class="fui-hbc__chart"
        >
          <g
            id="_HorizontalLine_lllllm_0"
          >
            <rect
              aria-label="2020/04/30, 10%."
              class="fui-hbc__barWrapper"
              data-is-focusable="true"
              fill="#004b50"
              height="12"
              opacity="1"
              role="img"
              tabindex="0"
              width="10.286666666666665%"
              x="0%"
              y="0"
            />
            <rect
              aria-label="13457/15000."
              class="fui-hbc__barWrapper"
              data-is-focusable="false"
              fill="var(--colorBackgroundOverlay)"
              height="12"
              opacity="1"
              role="img"
              width="89.71333333333334%"
              x="10.286666666666665%"
              y="0"
            />
          </g>
        </svg>
      </div>
    </div>
    <div>
      <div
        class="fui-hbc__items"
        data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
      >
        <div
          class="fui-hbc__chartTitle"
        >
          <div
            class="fui-hbc__chartTitleLeft"
            tabindex="0"
          >
            <span
              data-is-focusable="false"
              role="text"
            >
              two
            </span>
            <span
              hidden=""
            />
          </div>
          <div
            class="fui-hbc__chartTitleRight"
            data-is-focusable="false"
            role="text"
          >
            800
          </div>
        </div>
        <svg
          aria-label="two"
          class="fui-hbc__chart"
        >
          <g
            id="_HorizontalLine_lllllm_1"
          >
            <rect
              aria-label="2020/04/30, 5%."
              class="fui-hbc__barWrapper"
              data-is-focusable="true"
              fill="#5c2d91"
              height="12"
              opacity="1"
              role="img"
              tabindex="0"
              width="5.333333333333334%"
              x="0%"
              y="0"
            />
            <rect
              aria-label="14200/15000."
              class="fui-hbc__barWrapper"
              data-is-focusable="false"
              fill="var(--colorBackgroundOverlay)"
              height="12"
              opacity="1"
              role="img"
              width="94.66666666666667%"
              x="5.333333333333334%"
              y="0"
            />
          </g>
        </svg>
      </div>
    </div>
    <div>
      <div
        class="fui-hbc__items"
        data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
      >
        <div
          class="fui-hbc__chartTitle"
        >
          <div
            class="fui-hbc__chartTitleLeft"
            tabindex="0"
          >
            <span
              data-is-focusable="false"
              role="text"
            >
              three
            </span>
            <span
              hidden=""
            />
          </div>
          <div
            class="fui-hbc__chartTitleRight"
            data-is-focusable="false"
            role="text"
          >
            8,888
          </div>
        </div>
        <svg
          aria-label="three"
          class="fui-hbc__chart"
        >
          <g
            id="_HorizontalLine_lllllm_2"
          >
            <rect
              aria-label="2020/04/30, 59%."
              class="fui-hbc__barWrapper"
              data-is-focusable="true"
              fill="#a4262c"
              height="12"
              opacity="1"
              role="img"
              tabindex="0"
              width="59.25333333333334%"
              x="0%"
              y="0"
            />
            <rect
              aria-label="6112/15000."
              class="fui-hbc__barWrapper"
              data-is-focusable="false"
              fill="var(--colorBackgroundOverlay)"
              height="12"
              opacity="1"
              role="img"
              width="40.74666666666666%"
              x="59.25333333333334%"
              y="0"
            />
          </g>
        </svg>
      </div>
    </div>
    <div
      class="fui-cart__calloutContainer"
      id="callout75"
    />
  </div>
</div>
`;

exports[`Horizontal bar chart - Theme Should reflect theme change 1`] = `
<div>
  <div
    class="fui-FluentProvider fui-FluentProvider76"
    dir="ltr"
  >
    <div
      class="fui-hbc__root"
    >
      <div>
        <div
          class="fui-hbc__items"
          data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
        >
          <div
            class="fui-hbc__chartTitle"
          >
            <div
              class="fui-hbc__chartTitleLeft"
              tabindex="0"
            >
              <span
                data-is-focusable="false"
                role="text"
              >
                one
              </span>
              <span
                hidden=""
              />
            </div>
            <div
              class="fui-hbc__chartTitleRight"
              data-is-focusable="false"
              role="text"
            >
              1,543
            </div>
          </div>
          <svg
            aria-label="one"
            class="fui-hbc__chart"
          >
            <g
              id="_HorizontalLine_lllllm_0"
            >
              <rect
                aria-label="2020/04/30, 10%."
                class="fui-hbc__barWrapper"
                data-is-focusable="true"
                fill="#004b50"
                height="12"
                opacity="1"
                role="img"
                tabindex="0"
                width="10.286666666666665%"
                x="0%"
                y="0"
              />
              <rect
                aria-label="13457/15000."
                class="fui-hbc__barWrapper"
                data-is-focusable="false"
                fill="var(--colorBackgroundOverlay)"
                height="12"
                opacity="1"
                role="img"
                width="89.71333333333334%"
                x="10.286666666666665%"
                y="0"
              />
            </g>
          </svg>
        </div>
      </div>
      <div>
        <div
          class="fui-hbc__items"
          data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
        >
          <div
            class="fui-hbc__chartTitle"
          >
            <div
              class="fui-hbc__chartTitleLeft"
              tabindex="0"
            >
              <span
                data-is-focusable="false"
                role="text"
              >
                two
              </span>
              <span
                hidden=""
              />
            </div>
            <div
              class="fui-hbc__chartTitleRight"
              data-is-focusable="false"
              role="text"
            >
              800
            </div>
          </div>
          <svg
            aria-label="two"
            class="fui-hbc__chart"
          >
            <g
              id="_HorizontalLine_lllllm_1"
            >
              <rect
                aria-label="2020/04/30, 5%."
                class="fui-hbc__barWrapper"
                data-is-focusable="true"
                fill="#5c2d91"
                height="12"
                opacity="1"
                role="img"
                tabindex="0"
                width="5.333333333333334%"
                x="0%"
                y="0"
              />
              <rect
                aria-label="14200/15000."
                class="fui-hbc__barWrapper"
                data-is-focusable="false"
                fill="var(--colorBackgroundOverlay)"
                height="12"
                opacity="1"
                role="img"
                width="94.66666666666667%"
                x="5.333333333333334%"
                y="0"
              />
            </g>
          </svg>
        </div>
      </div>
      <div>
        <div
          class="fui-hbc__items"
          data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
        >
          <div
            class="fui-hbc__chartTitle"
          >
            <div
              class="fui-hbc__chartTitleLeft"
              tabindex="0"
            >
              <span
                data-is-focusable="false"
                role="text"
              >
                three
              </span>
              <span
                hidden=""
              />
            </div>
            <div
              class="fui-hbc__chartTitleRight"
              data-is-focusable="false"
              role="text"
            >
              8,888
            </div>
          </div>
          <svg
            aria-label="three"
            class="fui-hbc__chart"
          >
            <g
              id="_HorizontalLine_lllllm_2"
            >
              <rect
                aria-label="2020/04/30, 59%."
                class="fui-hbc__barWrapper"
                data-is-focusable="true"
                fill="#a4262c"
                height="12"
                opacity="1"
                role="img"
                tabindex="0"
                width="59.25333333333334%"
                x="0%"
                y="0"
              />
              <rect
                aria-label="6112/15000."
                class="fui-hbc__barWrapper"
                data-is-focusable="false"
                fill="var(--colorBackgroundOverlay)"
                height="12"
                opacity="1"
                role="img"
                width="40.74666666666666%"
                x="59.25333333333334%"
                y="0"
              />
            </g>
          </svg>
        </div>
      </div>
      <div
        class="fui-cart__calloutContainer"
        id="callout81"
      />
    </div>
  </div>
</div>
`;

exports[`Horizontal bar chart re-rendering Should re-render the Horizontal bar chart with data 1`] = `
<div>
  <div
    aria-label="Graph has no data to display"
    id="_HBC_empty82"
    role="alert"
    style="opacity: 0;"
  />
</div>
`;

exports[`Horizontal bar chart re-rendering Should re-render the Horizontal bar chart with data 2`] = `
<div>
  <div
    class="fui-hbc__root"
    style=""
  >
    <div>
      <div
        class="fui-hbc__items"
        data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
      >
        <div
          class="fui-hbc__chartTitle"
        >
          <div
            class="fui-hbc__chartTitleLeft"
            tabindex="0"
          >
            <span
              data-is-focusable="false"
              role="text"
            >
              one
            </span>
            <span
              hidden=""
            />
          </div>
          <div
            class="fui-hbc__chartTitleRight"
            data-is-focusable="false"
            role="text"
          >
            1,543
          </div>
        </div>
        <svg
          aria-label="one"
          class="fui-hbc__chart"
        >
          <g
            id="_HorizontalLine_lllllm_0"
          >
            <rect
              aria-label="2020/04/30, 10%."
              class="fui-hbc__barWrapper"
              data-is-focusable="true"
              fill="#004b50"
              height="12"
              opacity="1"
              role="img"
              tabindex="0"
              width="10.286666666666665%"
              x="0%"
              y="0"
            />
            <rect
              aria-label="13457/15000."
              class="fui-hbc__barWrapper"
              data-is-focusable="false"
              fill="var(--colorBackgroundOverlay)"
              height="12"
              opacity="1"
              role="img"
              width="89.71333333333334%"
              x="10.286666666666665%"
              y="0"
            />
          </g>
        </svg>
      </div>
    </div>
    <div>
      <div
        class="fui-hbc__items"
        data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
      >
        <div
          class="fui-hbc__chartTitle"
        >
          <div
            class="fui-hbc__chartTitleLeft"
            tabindex="0"
          >
            <span
              data-is-focusable="false"
              role="text"
            >
              two
            </span>
            <span
              hidden=""
            />
          </div>
          <div
            class="fui-hbc__chartTitleRight"
            data-is-focusable="false"
            role="text"
          >
            800
          </div>
        </div>
        <svg
          aria-label="two"
          class="fui-hbc__chart"
        >
          <g
            id="_HorizontalLine_lllllm_1"
          >
            <rect
              aria-label="2020/04/30, 5%."
              class="fui-hbc__barWrapper"
              data-is-focusable="true"
              fill="#5c2d91"
              height="12"
              opacity="1"
              role="img"
              tabindex="0"
              width="5.333333333333334%"
              x="0%"
              y="0"
            />
            <rect
              aria-label="14200/15000."
              class="fui-hbc__barWrapper"
              data-is-focusable="false"
              fill="var(--colorBackgroundOverlay)"
              height="12"
              opacity="1"
              role="img"
              width="94.66666666666667%"
              x="5.333333333333334%"
              y="0"
            />
          </g>
        </svg>
      </div>
    </div>
    <div>
      <div
        class="fui-hbc__items"
        data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
      >
        <div
          class="fui-hbc__chartTitle"
        >
          <div
            class="fui-hbc__chartTitleLeft"
            tabindex="0"
          >
            <span
              data-is-focusable="false"
              role="text"
            >
              three
            </span>
            <span
              hidden=""
            />
          </div>
          <div
            class="fui-hbc__chartTitleRight"
            data-is-focusable="false"
            role="text"
          >
            8,888
          </div>
        </div>
        <svg
          aria-label="three"
          class="fui-hbc__chart"
        >
          <g
            id="_HorizontalLine_lllllm_2"
          >
            <rect
              aria-label="2020/04/30, 59%."
              class="fui-hbc__barWrapper"
              data-is-focusable="true"
              fill="#a4262c"
              height="12"
              opacity="1"
              role="img"
              tabindex="0"
              width="59.25333333333334%"
              x="0%"
              y="0"
            />
            <rect
              aria-label="6112/15000."
              class="fui-hbc__barWrapper"
              data-is-focusable="false"
              fill="var(--colorBackgroundOverlay)"
              height="12"
              opacity="1"
              role="img"
              width="40.74666666666666%"
              x="59.25333333333334%"
              y="0"
            />
          </g>
        </svg>
      </div>
    </div>
    <div
      class="fui-cart__calloutContainer"
      id="callout86"
    />
  </div>
</div>
`;

exports[`Horizontal bar chart rendering Should render the Horizontal bar chart legend with string data 1`] = `
<div>
  <div
    class="fui-hbc__root"
  >
    <div>
      <div
        class="fui-hbc__items"
        data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
      >
        <div
          class="fui-hbc__chartTitle"
        >
          <div
            class="fui-hbc__chartTitleLeft"
            tabindex="0"
          >
            <span
              data-is-focusable="false"
              role="text"
            >
              one
            </span>
            <span
              hidden=""
            />
          </div>
          <div
            class="fui-hbc__chartTitleRight"
            data-is-focusable="false"
            role="text"
          >
            1,543
          </div>
        </div>
        <svg
          aria-label="one"
          class="fui-hbc__chart"
        >
          <g
            id="_HorizontalLine_lllllm_0"
          >
            <rect
              aria-label="2020/04/30, 10%."
              class="fui-hbc__barWrapper"
              data-is-focusable="true"
              fill="#004b50"
              height="12"
              opacity="1"
              role="img"
              tabindex="0"
              width="10.286666666666665%"
              x="0%"
              y="0"
            />
            <rect
              aria-label="13457/15000."
              class="fui-hbc__barWrapper"
              data-is-focusable="false"
              fill="var(--colorBackgroundOverlay)"
              height="12"
              opacity="1"
              role="img"
              width="89.71333333333334%"
              x="10.286666666666665%"
              y="0"
            />
          </g>
        </svg>
      </div>
    </div>
    <div>
      <div
        class="fui-hbc__items"
        data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
      >
        <div
          class="fui-hbc__chartTitle"
        >
          <div
            class="fui-hbc__chartTitleLeft"
            tabindex="0"
          >
            <span
              data-is-focusable="false"
              role="text"
            >
              two
            </span>
            <span
              hidden=""
            />
          </div>
          <div
            class="fui-hbc__chartTitleRight"
            data-is-focusable="false"
            role="text"
          >
            800
          </div>
        </div>
        <svg
          aria-label="two"
          class="fui-hbc__chart"
        >
          <g
            id="_HorizontalLine_lllllm_1"
          >
            <rect
              aria-label="2020/04/30, 5%."
              class="fui-hbc__barWrapper"
              data-is-focusable="true"
              fill="#5c2d91"
              height="12"
              opacity="1"
              role="img"
              tabindex="0"
              width="5.333333333333334%"
              x="0%"
              y="0"
            />
            <rect
              aria-label="14200/15000."
              class="fui-hbc__barWrapper"
              data-is-focusable="false"
              fill="var(--colorBackgroundOverlay)"
              height="12"
              opacity="1"
              role="img"
              width="94.66666666666667%"
              x="5.333333333333334%"
              y="0"
            />
          </g>
        </svg>
      </div>
    </div>
    <div>
      <div
        class="fui-hbc__items"
        data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
      >
        <div
          class="fui-hbc__chartTitle"
        >
          <div
            class="fui-hbc__chartTitleLeft"
            tabindex="0"
          >
            <span
              data-is-focusable="false"
              role="text"
            >
              three
            </span>
            <span
              hidden=""
            />
          </div>
          <div
            class="fui-hbc__chartTitleRight"
            data-is-focusable="false"
            role="text"
          >
            8,888
          </div>
        </div>
        <svg
          aria-label="three"
          class="fui-hbc__chart"
        >
          <g
            id="_HorizontalLine_lllllm_2"
          >
            <rect
              aria-label="2020/04/30, 59%."
              class="fui-hbc__barWrapper"
              data-is-focusable="true"
              fill="#a4262c"
              height="12"
              opacity="1"
              role="img"
              tabindex="0"
              width="59.25333333333334%"
              x="0%"
              y="0"
            />
            <rect
              aria-label="6112/15000."
              class="fui-hbc__barWrapper"
              data-is-focusable="false"
              fill="var(--colorBackgroundOverlay)"
              height="12"
              opacity="1"
              role="img"
              width="40.74666666666666%"
              x="59.25333333333334%"
              y="0"
            />
          </g>
        </svg>
      </div>
    </div>
    <div
      class="fui-cart__calloutContainer"
      id="callout5"
    />
  </div>
</div>
`;

exports[`HorizontalBarChart snapShot testing Should not render bar labels in absolute-scale variant 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    data-tabster="{\\"root\\":{}}"
  >
    <div>
      <div
        class="fui-hbc__root"
      >
        <div>
          <div
            class="fui-hbc__items"
            data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
          >
            <div
              class="fui-hbc__chartTitle"
            >
              <div
                class="fui-hbc__chartTitleLeft"
                tabindex="0"
              >
                <span
                  data-is-focusable="false"
                  role="text"
                >
                  one
                </span>
                <span
                  hidden=""
                />
              </div>
            </div>
            <svg
              aria-label="one"
              class="fui-hbc__chart"
            >
              <g
                id="_HorizontalLine_lllllm_0"
              >
                <rect
                  aria-label="2020/04/30, 10%."
                  class="fui-hbc__barWrapper"
                  data-is-focusable="true"
                  fill="#004b50"
                  height="12"
                  opacity="1"
                  role="img"
                  tabindex="0"
                  width="10.286666666666665%"
                  x="0%"
                  y="0"
                />
                <text />
              </g>
            </svg>
          </div>
        </div>
        <div>
          <div
            class="fui-hbc__items"
            data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
          >
            <div
              class="fui-hbc__chartTitle"
            >
              <div
                class="fui-hbc__chartTitleLeft"
                tabindex="0"
              >
                <span
                  data-is-focusable="false"
                  role="text"
                >
                  two
                </span>
                <span
                  hidden=""
                />
              </div>
            </div>
            <svg
              aria-label="two"
              class="fui-hbc__chart"
            >
              <g
                id="_HorizontalLine_lllllm_1"
              >
                <rect
                  aria-label="2020/04/30, 5%."
                  class="fui-hbc__barWrapper"
                  data-is-focusable="true"
                  fill="#5c2d91"
                  height="12"
                  opacity="1"
                  role="img"
                  tabindex="0"
                  width="5.333333333333334%"
                  x="0%"
                  y="0"
                />
                <text />
              </g>
            </svg>
          </div>
        </div>
        <div>
          <div
            class="fui-hbc__items"
            data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
          >
            <div
              class="fui-hbc__chartTitle"
            >
              <div
                class="fui-hbc__chartTitleLeft"
                tabindex="0"
              >
                <span
                  data-is-focusable="false"
                  role="text"
                >
                  three
                </span>
                <span
                  hidden=""
                />
              </div>
            </div>
            <svg
              aria-label="three"
              class="fui-hbc__chart"
            >
              <g
                id="_HorizontalLine_lllllm_2"
              >
                <rect
                  aria-label="2020/04/30, 59%."
                  class="fui-hbc__barWrapper"
                  data-is-focusable="true"
                  fill="#a4262c"
                  height="12"
                  opacity="1"
                  role="img"
                  tabindex="0"
                  width="59.25333333333334%"
                  x="0%"
                  y="0"
                />
                <text />
              </g>
            </svg>
          </div>
        </div>
        <div
          class="fui-cart__calloutContainer"
          id="callout101"
        />
      </div>
    </div>
    <div
      class=""
      data-portal-node="true"
      dir="ltr"
    >
      <div
        class="fui-Tooltip__content"
        id="tooltip-98"
        role="tooltip"
      >
        one
      </div>
    </div>
    <div
      class=""
      data-portal-node="true"
      dir="ltr"
    >
      <div
        class="fui-Tooltip__content"
        id="tooltip-99"
        role="tooltip"
      >
        two
      </div>
    </div>
    <div
      class=""
      data-portal-node="true"
      dir="ltr"
    >
      <div
        class="fui-Tooltip__content"
        id="tooltip-100"
        role="tooltip"
      >
        three
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="fui-hbc__root"
    >
      <div>
        <div
          class="fui-hbc__items"
          data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
        >
          <div
            class="fui-hbc__chartTitle"
          >
            <div
              class="fui-hbc__chartTitleLeft"
              tabindex="0"
            >
              <span
                data-is-focusable="false"
                role="text"
              >
                one
              </span>
              <span
                hidden=""
              />
            </div>
          </div>
          <svg
            aria-label="one"
            class="fui-hbc__chart"
          >
            <g
              id="_HorizontalLine_lllllm_0"
            >
              <rect
                aria-label="2020/04/30, 10%."
                class="fui-hbc__barWrapper"
                data-is-focusable="true"
                fill="#004b50"
                height="12"
                opacity="1"
                role="img"
                tabindex="0"
                width="10.286666666666665%"
                x="0%"
                y="0"
              />
              <text />
            </g>
          </svg>
        </div>
      </div>
      <div>
        <div
          class="fui-hbc__items"
          data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
        >
          <div
            class="fui-hbc__chartTitle"
          >
            <div
              class="fui-hbc__chartTitleLeft"
              tabindex="0"
            >
              <span
                data-is-focusable="false"
                role="text"
              >
                two
              </span>
              <span
                hidden=""
              />
            </div>
          </div>
          <svg
            aria-label="two"
            class="fui-hbc__chart"
          >
            <g
              id="_HorizontalLine_lllllm_1"
            >
              <rect
                aria-label="2020/04/30, 5%."
                class="fui-hbc__barWrapper"
                data-is-focusable="true"
                fill="#5c2d91"
                height="12"
                opacity="1"
                role="img"
                tabindex="0"
                width="5.333333333333334%"
                x="0%"
                y="0"
              />
              <text />
            </g>
          </svg>
        </div>
      </div>
      <div>
        <div
          class="fui-hbc__items"
          data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
        >
          <div
            class="fui-hbc__chartTitle"
          >
            <div
              class="fui-hbc__chartTitleLeft"
              tabindex="0"
            >
              <span
                data-is-focusable="false"
                role="text"
              >
                three
              </span>
              <span
                hidden=""
              />
            </div>
          </div>
          <svg
            aria-label="three"
            class="fui-hbc__chart"
          >
            <g
              id="_HorizontalLine_lllllm_2"
            >
              <rect
                aria-label="2020/04/30, 59%."
                class="fui-hbc__barWrapper"
                data-is-focusable="true"
                fill="#a4262c"
                height="12"
                opacity="1"
                role="img"
                tabindex="0"
                width="59.25333333333334%"
                x="0%"
                y="0"
              />
              <text />
            </g>
          </svg>
        </div>
      </div>
      <div
        class="fui-cart__calloutContainer"
        id="callout101"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`HorizontalBarChart snapShot testing Should render absolute-scale variant correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    data-tabster="{\\"root\\":{}}"
  >
    <div>
      <div
        class="fui-hbc__root"
      >
        <div>
          <div
            class="fui-hbc__items"
            data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
          >
            <div
              class="fui-hbc__chartTitle"
            >
              <div
                class="fui-hbc__chartTitleLeft"
                tabindex="0"
              >
                <span
                  data-is-focusable="false"
                  role="text"
                >
                  one
                </span>
                <span
                  hidden=""
                />
              </div>
            </div>
            <svg
              aria-label="one"
              class="fui-hbc__chart"
            >
              <g
                id="_HorizontalLine_lllllm_0"
              >
                <rect
                  aria-label="2020/04/30, 10%."
                  class="fui-hbc__barWrapper"
                  data-is-focusable="true"
                  fill="#004b50"
                  height="12"
                  opacity="1"
                  role="img"
                  tabindex="0"
                  width="10.286666666666665%"
                  x="0%"
                  y="0"
                />
                <text
                  aria-hidden="true"
                  class="fui-hbc__barLabel"
                  dominant-baseline="central"
                  transform="translate(4)"
                  x="10.286666666666665%"
                  y="6"
                >
                  1.5k
                </text>
              </g>
            </svg>
          </div>
        </div>
        <div>
          <div
            class="fui-hbc__items"
            data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
          >
            <div
              class="fui-hbc__chartTitle"
            >
              <div
                class="fui-hbc__chartTitleLeft"
                tabindex="0"
              >
                <span
                  data-is-focusable="false"
                  role="text"
                >
                  two
                </span>
                <span
                  hidden=""
                />
              </div>
            </div>
            <svg
              aria-label="two"
              class="fui-hbc__chart"
            >
              <g
                id="_HorizontalLine_lllllm_1"
              >
                <rect
                  aria-label="2020/04/30, 5%."
                  class="fui-hbc__barWrapper"
                  data-is-focusable="true"
                  fill="#5c2d91"
                  height="12"
                  opacity="1"
                  role="img"
                  tabindex="0"
                  width="5.333333333333334%"
                  x="0%"
                  y="0"
                />
                <text
                  aria-hidden="true"
                  class="fui-hbc__barLabel"
                  dominant-baseline="central"
                  transform="translate(4)"
                  x="5.333333333333334%"
                  y="6"
                >
                  800
                </text>
              </g>
            </svg>
          </div>
        </div>
        <div>
          <div
            class="fui-hbc__items"
            data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
          >
            <div
              class="fui-hbc__chartTitle"
            >
              <div
                class="fui-hbc__chartTitleLeft"
                tabindex="0"
              >
                <span
                  data-is-focusable="false"
                  role="text"
                >
                  three
                </span>
                <span
                  hidden=""
                />
              </div>
            </div>
            <svg
              aria-label="three"
              class="fui-hbc__chart"
            >
              <g
                id="_HorizontalLine_lllllm_2"
              >
                <rect
                  aria-label="2020/04/30, 59%."
                  class="fui-hbc__barWrapper"
                  data-is-focusable="true"
                  fill="#a4262c"
                  height="12"
                  opacity="1"
                  role="img"
                  tabindex="0"
                  width="59.25333333333334%"
                  x="0%"
                  y="0"
                />
                <text
                  aria-hidden="true"
                  class="fui-hbc__barLabel"
                  dominant-baseline="central"
                  transform="translate(4)"
                  x="59.25333333333334%"
                  y="6"
                >
                  8.9k
                </text>
              </g>
            </svg>
          </div>
        </div>
        <div
          class="fui-cart__calloutContainer"
          id="callout96"
        />
      </div>
    </div>
    <div
      class=""
      data-portal-node="true"
      dir="ltr"
    >
      <div
        class="fui-Tooltip__content"
        id="tooltip-93"
        role="tooltip"
      >
        one
      </div>
    </div>
    <div
      class=""
      data-portal-node="true"
      dir="ltr"
    >
      <div
        class="fui-Tooltip__content"
        id="tooltip-94"
        role="tooltip"
      >
        two
      </div>
    </div>
    <div
      class=""
      data-portal-node="true"
      dir="ltr"
    >
      <div
        class="fui-Tooltip__content"
        id="tooltip-95"
        role="tooltip"
      >
        three
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="fui-hbc__root"
    >
      <div>
        <div
          class="fui-hbc__items"
          data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
        >
          <div
            class="fui-hbc__chartTitle"
          >
            <div
              class="fui-hbc__chartTitleLeft"
              tabindex="0"
            >
              <span
                data-is-focusable="false"
                role="text"
              >
                one
              </span>
              <span
                hidden=""
              />
            </div>
          </div>
          <svg
            aria-label="one"
            class="fui-hbc__chart"
          >
            <g
              id="_HorizontalLine_lllllm_0"
            >
              <rect
                aria-label="2020/04/30, 10%."
                class="fui-hbc__barWrapper"
                data-is-focusable="true"
                fill="#004b50"
                height="12"
                opacity="1"
                role="img"
                tabindex="0"
                width="10.286666666666665%"
                x="0%"
                y="0"
              />
              <text
                aria-hidden="true"
                class="fui-hbc__barLabel"
                dominant-baseline="central"
                transform="translate(4)"
                x="10.286666666666665%"
                y="6"
              >
                1.5k
              </text>
            </g>
          </svg>
        </div>
      </div>
      <div>
        <div
          class="fui-hbc__items"
          data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
        >
          <div
            class="fui-hbc__chartTitle"
          >
            <div
              class="fui-hbc__chartTitleLeft"
              tabindex="0"
            >
              <span
                data-is-focusable="false"
                role="text"
              >
                two
              </span>
              <span
                hidden=""
              />
            </div>
          </div>
          <svg
            aria-label="two"
            class="fui-hbc__chart"
          >
            <g
              id="_HorizontalLine_lllllm_1"
            >
              <rect
                aria-label="2020/04/30, 5%."
                class="fui-hbc__barWrapper"
                data-is-focusable="true"
                fill="#5c2d91"
                height="12"
                opacity="1"
                role="img"
                tabindex="0"
                width="5.333333333333334%"
                x="0%"
                y="0"
              />
              <text
                aria-hidden="true"
                class="fui-hbc__barLabel"
                dominant-baseline="central"
                transform="translate(4)"
                x="5.333333333333334%"
                y="6"
              >
                800
              </text>
            </g>
          </svg>
        </div>
      </div>
      <div>
        <div
          class="fui-hbc__items"
          data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
        >
          <div
            class="fui-hbc__chartTitle"
          >
            <div
              class="fui-hbc__chartTitleLeft"
              tabindex="0"
            >
              <span
                data-is-focusable="false"
                role="text"
              >
                three
              </span>
              <span
                hidden=""
              />
            </div>
          </div>
          <svg
            aria-label="three"
            class="fui-hbc__chart"
          >
            <g
              id="_HorizontalLine_lllllm_2"
            >
              <rect
                aria-label="2020/04/30, 59%."
                class="fui-hbc__barWrapper"
                data-is-focusable="true"
                fill="#a4262c"
                height="12"
                opacity="1"
                role="img"
                tabindex="0"
                width="59.25333333333334%"
                x="0%"
                y="0"
              />
              <text
                aria-hidden="true"
                class="fui-hbc__barLabel"
                dominant-baseline="central"
                transform="translate(4)"
                x="59.25333333333334%"
                y="6"
              >
                8.9k
              </text>
            </g>
          </svg>
        </div>
      </div>
      <div
        class="fui-cart__calloutContainer"
        id="callout96"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
